Add MemoryFileTracker support to NMTUsage